# test_pypi

./: Readme.md  Readme_flit.md  index.html  pyproject.toml
src/numpy_numeric/: __init__.py  example.py
src/numpy_numeric/test/: test_run.py
